--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,9 +1,9 @@
 {
-	"manifest_version": 2,
+	"manifest_version": 3,
 	"name": "Copylink",
 	"description": "Click to copy the url of the current page to your clipboard",
-	"version": "1.2.0",
-	"browser_action": {
+	"version": "1.3.0",
+	"action": {
 		"default_icon": "128_icon.png",
 		"default_popup": "index.html"
 	},
