--- a/app/manifest.json
+++ b/app/manifest.json
@@ -7,10 +7,7 @@
 		"default_icon": "128_icon.png",
 		"default_popup": "index.html"
 	},
-	"permissions": [
-		"activeTab",
-		"clipboardWrite"
-	],
+	"permissions": ["activeTab", "clipboardWrite"],
 	"icons": {
 		"128": "128_icon.png",
 		"48": "48_icon.png",
